docs: regenerated javadocs feat: automatic stiff detection in Fluid solver feat: added qna method to MAM feat: major updates to JMT fix: many small bug fixes